syntax = "proto3";
package itavy.mq.structure;

message MQMessagePartial {
  string msg_type = 1;
}

message MQReplyOn {
  string queue = 1;
  string topic = 2;
  string exchange = 3;
}

message MQMessage {
  string msg_type = 1;
  string id = 2;
  string reply_to = 3;
  MQReplyOn reply_on = 4;
  string from = 5;
  string to = 6;
  int64 ts = 7;
  bytes message = 8;
}

